--- a/.github/workflows/deutschland_generator.yaml
+++ b/.github/workflows/deutschland_generator.yaml
@@ -6,7 +6,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        python-version: ['3.7.8' ]
+        python-version: ['3.11.1']
     steps:
       - uses: actions/checkout@v2
 
@@ -17,7 +17,7 @@ jobs:
             file_glob: "openapi.yaml"
 
       - name: "Generate deutschland code"
-        uses: wirthual/deutschland-generator-action@v0.7.0
+        uses: wirthual/deutschland-generator-action@latest
         with:
           openapi-file: ${{ github.workspace }}/openapi.yaml
           upload-to-pypi: false
